# audience_market_sim

./: .gitignore  Cargo.toml  README.md  config.toml  市场交易-1766287823052.json
database/: agent_cash_logs_greptime.sql  agent_demand_removal_logs_greptime.sql  agent_range_adjustment_logs_greptime.sql  factory_end_of_round_logs_greptime.sql  factory_range_optimization_logs_greptime.sql  trade_logs_greptime.sql
src/: entity.rs  logging.rs  main.rs  model.rs
src/entity/: normal_distribute.rs
src/logging/: agent_cash_log.rs  agent_demand_removal_log.rs  agent_range_adjustment_log.rs  factory_end_of_round_log.rs  factory_range_optimization_log.rs  trade_log.rs
src/model/: agent.rs  factory.rs  market.rs  product.rs  util.rs
src/model/agent/: preference.rs
src/model/factory/: accountant.rs  financial_bill.rs
