[package]
name = "austrian_market_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
toml = "0.8.14"
lazy_static = "1.5.0"
greptimedb-ingester = { git = "https://github.com/GreptimeTeam/greptimedb-ingester-rust.git" }
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
csv = "1.3.0"
rayon = "1.10.0"
mysql = "26.0.1"
